# rust-text-games-engine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GAME_STATES_README.md  README.md  docker-compose.yml  env.example  shakti_game_engine_design.md
.cursor/rules/: method-call-comments.mdc  secrets-and-env.mdc
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  middleware.rs  state.rs
crates/api/src/routes/: health.rs  mod.rs  sessions.rs
crates/app/: Cargo.toml
crates/app/src/: config.rs  lib.rs  main.rs  support.rs
crates/app/tests/: integration_test.rs
crates/app/tests/common/: http.rs  mod.rs
crates/app/tests/gap_fill_full_session/: mod.rs
crates/application/: Cargo.toml
crates/application/src/: deps.rs  lib.rs
crates/application/src/services/: advance_session.rs  create_game_session.rs  get_result.rs  get_session.rs  start_session.rs  submit_answer.rs
crates/domain/: Cargo.toml
crates/domain/src/: answer.rs  content.rs  correct_usage_llm.rs  crossword.rs  crossword_engine.rs  crossword_placer.rs  engine.rs  errors.rs  game_session.rs  game_step.rs  gap_fill.rs  ids.rs  lib.rs  passage.rs  policies.rs  result.rs  score.rs  usage_quiz.rs
crates/engine/: Cargo.toml
crates/engine/src/: billing.rs  deps.rs  errors.rs  lib.rs  ports.rs
crates/engine/src/llm/: json.rs  mock.rs  mod.rs  prompt.rs  prompt_correct_usage.rs  prompt_crossword.rs
crates/engine/src/services/: advance_session.rs  create_game_session.rs  get_result.rs  get_session.rs  mod.rs  play_again.rs  start_session.rs  submit_answer.rs  translation_hint.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/game_billing/: client.rs  mod.rs  scheduler.rs
crates/infrastructure/src/llm/: actors_resolved_openai_pair.rs  actors_resolving_openai_gap_fill.rs  mod.rs  openai_gap_fill.rs  openai_text_translate.rs
crates/infrastructure/src/pg/: clock.rs  content.rs  definitions.rs  events.rs  hard_words.rs  mapping.rs  mod.rs  sessions.rs
crates/pricing/: Cargo.toml
crates/pricing/src/: lib.rs
crates/translation/: Cargo.toml
crates/translation/src/: lib.rs  mock.rs  prompt.rs
migrations/: 20250401000001_init.sql  20250401000002_seed.sql  20250402000001_rename_game_steps_prompt_to_user_facing_step_prompt.sql  20250403000001_passage_gap_fill.sql  20250403000002_seed_passage.sql  20250407000001_gap_fill_llm_limits.sql  20260409120000_recap_multi_game_definitions.sql  20260410120000_game_definition_display_names.sql  20260410140000_correct_usage_game_definition.sql  20260411120000_crossword_game_definition.sql
