[package]
name = "shakti-game-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "shakti_game_engine"
path = "src/lib.rs"

[[bin]]
name = "shakti-game-engine"
path = "src/main.rs"

[dependencies]
shakti-game-domain = { path = "../domain" }
shakti-game-engine-core = { path = "../engine" }
shakti-game-infrastructure = { path = "../infrastructure" }
shakti-game-api = { path = "../api" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tower = { version = "0.5", features = ["util"] }
uuid = "1"
