[package]
name = "shakti-game-domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
thiserror = "2"
unicode-normalization = "0.1"
