[package]
name = "shakti-game-engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shakti-game-domain = { path = "../domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
thiserror = "2"
async-trait = "0.1"
