[package]
name = "shakti-game-infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shakti-game-domain = { path = "../domain" }
shakti-game-engine-core = { path = "../engine" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time", "json", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
async-openai = { version = "0.34", features = ["chat-completion"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["sync"] }
url = "2"
